hands-on/back-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backapp
  template:
    metadata:
      labels:
        app: backapp
    spec:
      containers:
      - name: nginx
        image: nginx:1.14
