hands-on/configmap-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmappod
  labels:
    app: configmappod
spec:
  containers:
    - name: configmap-c
      image: busybox 
      command: ['sh', '-c', 'echo $MY_VAR && sleep 600']
