hands-on/configmapvolume-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-cmvpod
  labels:
    app: busyboxcmv
spec:
  containers:
    - name: busybox-cmv
      image: busybox 
      command: ['sh', '-c', 'echo $(cat /etc/configmap/mykey) && sleep 600']  
      volumeMounts:
      - name: c-volume
        mountPath: /etc/configmap
  volumes:
  - name: c-volume
    configMap: 
      name: myconfigmap
