hands-on/front-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: front-pod
  labels:
    app: frontapp
spec:
  containers:
  - name: busybox
    image: busybox
    command: ['sh', '-c', 'echo "Hello, Kubernetes!" && sleep 3600']
