hands-on/multicontainer-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mc-pod
  labels:
    app: mc
spec:
  containers:
    - name: nginx1
      image: nginx
      ports:
      - containerPort: 8080
      volumeMounts:
      - name: mc-volume
        mountPath: /var/log/mc-data
    - name: debian1
      image: debian
      command: ["/bin/sh"]
      args: ["-c", "echo Capture logs >> /var/log/mc-data/logdata && sleep 3600"]
      volumeMounts:
      - name: mc-volume
        mountPath: /var/log/mc-data
  volumes:
  - name: mc-volume
    hostPath:
      path:  /var/log/mc-data
