hands-on/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: nginx
spec:
  containers:
    - name: nginx-c
      image: nginx
      ports:
      - containerPort: 80
