hands-on/np-client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: np-client
spec:
  containers:
  - name: busybox
    image: radial/busyboxplus:curl
    command: ["/bin/sh", "-c", "while true; do sleep 600; done"]
