hands-on/pod-nameselect.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-pod
  labels:
    app: busybox
spec:
  containers:
    - name: busybox-c
      image: busybox 
      command: ['sh', '-c', 'echo Hello Kubernetes! && sleep 600']  
  nodeSelector:
    type: backend
