hands-on/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-pod
  labels:
    app: busybox
spec:
  containers:
    - name: busybox-c
      image: busybox 
      command: ['sh', '-c', 'echo Hello Kubernetes Hannds On! && sleep 600']
