hands-on/resource-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginxpod
  labels:
    app: nginxapp
spec:
  containers:
    - name: nginx-c
      image: nginx
      ports:
        - containerPort: 80
      resources:
        requests:
          memory: "64Mi"
          cpu: "250m"
        limits:
          memory: "128Mi"
          cpu: "500m"
