hands-on/secret-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-pod
  labels:
    app: secret
spec:
  containers:
    - name: secret-c
      image: busybox 
      command: ['sh', '-c', 'echo Hello Kubernetes! && sleep 600']  
      volumeMounts:
      - name: foo
        mountPath: /etc/foo
  volumes:
    - name: foo
      secret:
        secretName: my-secret
