hands-on/back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: backapp
