hands-on/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  type: NodePort
  selector:
    app: nginxdep
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32000
