hands-on/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  type: ClusterIP
  selector:
    app: nginxdep
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
