hands-on/control-ingress-access.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: control-ingress-access
spec:
  podSelector:
    matchLabels:
      app: nginxdep
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 10.244.0.0/16
        except:
        - 10.244.2.0/24
    - podSelector:
        matchLabels:
          app: nginxdep
    ports:
    - protocol: TCP
      port: 80
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: nginxdep
    ports:
    - protocol: TCP
